css/bigsdb.css
/* ... */
div#queryform li,p,dd {position:relative;z-index:3}
div#queryform table {border-collapse:collapse;border-spacing:0}
div#queryform table.queryform {border-collapse:separate;border-spacing:1px}
div#queryform table.queryform td {padding:0}
div#chart {background:#e0e0e0}
div#sequence {background:#efefff}
div#index {background:#d5e0d5}
div#submissions {background:#d5d5e0}
div#account_requests {background:#e0e0d5}
div#sets {background:#e0e0d5}
div#schemes {background:#e0e0d5}
div#projects,div#jobs {background:#f0f0e5}
div#restricted {background:#e0d5d5}
div#statuswarn, div.statuswarn {background:#e0e0d5;color:#404000}
div#statusbad, div.statusbad {background:#e0d5d5;color:#800000}
div.statusbad_no_resize {background:#e0d5d5;color:#800000}
div.statusgood_no_resize {background:#d5e0d5;color:#008000}
div#warning {background:#e0a0a0;color:#000000}
div#resultsheader {background:#d5e0d5;padding:5px}
div#resultsfooter {background:#d5e0d5;padding:5px}
div#resultstable, div.resultstable {background:#e0e0e0}
div#resultspanel, div.resultspanel {background:#f0f0f0}
div#resultspanel li,p,dd {position:relative;z-index:3}
div#samples table {border-spacing:1px}
div#samples {background:#f0e0e0}
div#alleles {background:#e0e0f0}
div#alleles table {border-spacing:1px}
div.scrollable {overflow-x:auto;padding-top:0.1em}
div#resultstable p.comment {font-size:0.95em}
div#abstract {background:#d5d5e0}
div#banner {background:#d5d5d5;padding:10px 10px 1px 10px;color:#006}
div#plugins {background:#d5d5e0}
div#message {background:#e0d5d5}
div#curatetools { background: #e5e5f0}

div#menubutton {
	float:right;
	font-size:1.2em;
	position:absolute;
	top:4px;
	right:5px;
	z-index:3;		
}

div#menubutton a  {
	border:1px solid transparent;
	border-radius: 3px;
	box-shadow: 1px 1px 1px transparent;
	padding:0 0.1em;
	color:black
}
div#menubutton a:hover {
	border:1px solid #ccc;
	box-shadow: 1px 1px 1px #dfdfdf;
}
div#menupanel {
	background:#f0f0f0;
	color:black;
	float:right;
	position:absolute;
	top:23px;
	right:0px;
	padding:1em;
	z-index:10;		
	border-radius:10px;
	border:1px solid #ccc;
	box-shadow:3px 3px 3px #dfdfdf;
	display:none;
}
div#menupanel ul.menu {margin-left:12px}

div#pluginoptions, div#curatetools {
	background:#ddd;
	float:right;
	position:absolute;
	top:4.5em;
	right:5px;
	z-index:9;
	padding:10px;
	font-size:0.8em;
	margin-bottom: 0.5em;
	border: 1px solid #999;
	border-radius: 10px;
	box-shadow: 3px 3px 3px #dfdfdf;
}

div#pluginoptions ul {list-style-type:none; margin-left:-2em}

div#logindetails {
	background:#ecece9;
	padding: 0 0.5em;
	float:left;
	font-size:0.7em;
	position:absolute;
	top:3px;
	left:5px;
	z-index:4;
}

div#fieldvalueshelp {
	background:#ecece9;
	padding: 0 0.5em;
	float:right;
	font-size:0.7em;
	position:absolute;
	top:3px;
	right:27px;
	z-index:3;	
}

div.floatmenu {
	float:right;
	position:absolute;
	top:2.5em;
	right:10px;
	font-size:0.8em;
	border:1px solid #d0d0d0;	
	background:#c0c0c0;
	color:white;
	z-index:3;
}

div.floatmenu a {
	text-decoration:none;
	color:white;
	cursor:pointer;	
}

div.flags {line-height:2em;margin-bottom:0.5em}
div.flags a {text-decoration:none}

table.resultstable {text-align:center;padding:0.1em}
table.resultstable td,th {padding:0 0.2em}
table.profile {background:#e0e0e0;text-align:center}

span.field { color: blue }
span.text { color: black }
span.locus { color: green }
span.scheme { color: red}
span.aliases {font-size: 0.9em}
span.context_help a {background:#66f; color:white; margin-right:2em; padding: 0 0.5em; text-decoration:none}
span.flag {
	font-size:1.2em;
	font-weight:600;
	white-space:nowrap;
	border-width:3px;
	border-top-style:solid;
	border-bottom-style:solid;
	padding:0 0.1em
}
.flash_message {color:purple}

.hiddenbydefault {display:none}
pre.sixpack {font-size:1.3em}

fieldset {
	display:inline;
	vertical-align:top;
	border:0;
	border-top:1px solid #aaa;
}

div#accordion ul {padding:0 0 0 0.5em;list-style:none}

fieldset ul {margin:0;padding:0 0 0 0.5em;list-style:none}  
fieldset li {padding-bottom:0.2em}

fieldset label.filter {    
	float:left;    
	width:12em;    
	margin-right:0.5em;    
	text-align:right;  
}

fieldset label.form { 
	float:left;    
	width:12em;    
	margin-right:0.5em;    
	text-align:right;  
}

fieldset label.parameter {    
	float:left;    
	width:10em;    
	margin-right:0.5em;    
	text-align:right;  
}

fieldset.display {padding-top:2em;background:transparent}

fieldset label.display {    
	float:left;    
	width:6em;    
	margin-right:0.5em;    
	text-align:right;  
}

legend {margin-left:1em;color:navy}  

div.tree {
	width:80%;
	height:300px; 
	margin:0; 
	border:1px solid gray; 
	background:white; 
	overflow:auto;
}

div.scheme_tree {
	min-width:15em;
	max-width:95%;
	min-height:3em;
	max-height:15em; 
	border:1px solid #aaa; 
	overflow:auto;
	margin-right:1em;
	background:white; 
}

 .data dt { 
 	float: left; 
 	clear: left; 
 	width: 10em; 
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	text-align: right; 
 	font-weight: bold; 
 	color: #404080; 
 } 
 .data dt:after {content:":"} 
 .data dd {margin: 0 0 0 11em;padding: 0 0 0.3em 0}
 
 dl.profile {
	margin:0;
	display:inline-block;
	border:1px solid #ccc;
	text-align:center;
}
	
.profile dt {
	margin:0;
	padding:0 0.5em;
	height:1.2em;
	background-color:#a3a3cc;
	color:black;
	font-weight:bold;
}
	
.profile dd {
	min-height:1.7em;
	padding: 0 0.2em;
	margin:0;
	background:white;
}


 .projects dt {
	background-color: #666;
	color: white;
	padding: 0.1em;
	font-weight: bold;
	text-align: center;
	border-radius:30px
}
	
.projects dd {
	margin: 0 0 1em 0;
	text-align: left;
	padding: 0.5em;
}

h3.scheme {
	clear:both;
	margin-bottom:0.2em;
	text-align:center;
	background: #404080;
	color:white;
	border-radius:30px;
	padding: 0 0.2em;
}
h3.scheme a {color:white}

h3.group {
	clear:both;
	margin-bottom:-0.8em;
	text-align:center;
	background:#BFFFBF;
	color:black;
	border-radius:30px;
	padding: 0 0.2em;	
}
/* ... */

